# partio

./: .travis.yaml  .travis.yml  CMakeLists.txt  README
contrib/cmake/: FindMaya.cmake
contrib/partio4Arnold/: CMakeLists.txt
contrib/partio4Arnold/plugin/: CMakeLists.txt  PartioVizTranslator.cpp  PartioVizTranslator.h
contrib/partio4Arnold/shaders/: partioCacherSampler.cpp
contrib/partio4Clarisse/: CMakeLists.txt  main.cpp  partio.cid
contrib/partio4USD/: CMakeLists.txt
contrib/partio4USD/fileFormat/: fileFormat.cpp
contrib/partio4USD/primWriter/: primWriter.cpp
src/lib/core/: KdTree.h
src/tools/: CMakeLists.txt
